refactor preprocessing